# ai-code-guardian

./: .gitignore  .guardian.rules.example.json  .guardianignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  SETUP_FOR_OPENCLAW.md  index.html  openclaw_scan_v0.9.0.json  test_vulnerable.js
.github/workflows/: ci.yml  pr-security-scan.yml  security-scan.yml
examples/: github-action-pr-only.yml  github-action-simple.yml
src/: constants.rs  custom_rules.rs  deps.rs  git.rs  ignore.rs  main.rs  patterns.rs  report.rs  scanner.rs  tui.rs  watch.rs
