[package]
name = "ai-code-guardian"
version = "0.11.1"
edition = "2021"
authors = ["Dinakar Sarbada <dinakars777@gmail.com>"]
description = "Security scanner for AI-generated code - detects vulnerabilities before you commit"
license = "MIT"
repository = "https://github.com/dinakars777/ai-code-guardian"
keywords = ["security", "ai", "scanner", "vulnerabilities", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ai-guardian"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.5"
regex = "1.11"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5"
crossterm = "0.27"
ratatui = "0.26"
notify = "6.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
